powernap (2.12) unreleased; urgency=low

  * UNRELEASED

 -- Andres Rodriguez <andreserl@ubuntu.com>  Mon, 20 Jun 2011 18:08:12 -0400

powernap (2.11-0ubuntu1) oneiric; urgency=low

  * actions/01cpu_online: Delay disabling of CPU's when machine is Desktop
    to allow it to apply template and not crash.

 -- Andres Rodriguez <andreserl@ubuntu.com>  Mon, 20 Jun 2011 18:08:09 -0400

powernap (2.10-0ubuntu1) oneiric; urgency=low

  * Add support for port ranges to TCPMonitor (LP: #760729)
    - powernap/monitors/TCPMonitor.py: Add support.
    - powernap/powernap.py: Ensure that ports are now passed as strings.
    - config: Update to reflect new feature.
  * debian/control:
    - Bump Build-Depends on debhelper.
    - Change python supported version.
    - Update Bzr-VCS to current.
    - Set Dustin as Original maintainer and set myself as maintainer.

 -- Andres Rodriguez <andreserl@ubuntu.com>  Thu, 09 Jun 2011 16:42:59 -0400

powernap (2.9-0ubuntu1) oneiric; urgency=low

  * sbin/powernap, sbin/powernapd:
    - add an indicator to show when powernap is engaged, remove after waking
  * === added directory debian/source, debian/source/format:
    - add this back in (got a fix for release scripts)

 -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 02 Jun 2011 17:43:23 -0400

powernap (2.8-0ubuntu1) oneiric; urgency=low

  [ Andres Rodriguez ]
  * Switch to dpkg-source 3.0 (quilt) format
  * Switch to dh_python2 instead of dh_pycentral
  * sbin/powernap: ACTION_METHOD is now passed as an argument.
  * Second Stage Action Method (LP: #711521)
    - config: Add config options.
    - powernap/powernap.py: Add loading of config values.
    - sbin/powernapd: Add logic to handle second stage action.

  [ Dustin Kirkland ]
  * config: remove trailing whitespace
  * debian/source/format, === removed directory debian/source:
    - drop these for now, as they're breaking the release scripts

 -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 02 Jun 2011 16:51:20 -0400
