@@ -1,0 +1,7 @@
+[powerwake]
+
+INTERVAL_SECONDS = 1
+DEBUG = 3
+
+[ARPMonitor]
+enable = y
